multiple users added and dashboard landing

--- a/src/app/user-login/user-login.component.html
+++ b/src/app/user-login/user-login.component.html
@@ -15,9 +15,8 @@
         </label>
       </div>
       <button type="submit" class="btn btn-primary">Submit</button>
-      <a routerLink="dashboard">to dashboard</a>
     </form>
   </div>
 </div>
 
-{{userLoginForm.value | json}}
+<!-- {{userLoginForm.value | json}} -->
