--- a/src/app/user-login/user-login.component.html
+++ b/src/app/user-login/user-login.component.html
@@ -1,22 +1,26 @@
 <div class="loginFormContainer">
   <div class="container">
-    <form #userLoginForm="ngForm" (ngSubmit)="loginUser(userLoginForm)">
+    <form [formGroup]="userLoginForm" (ngSubmit)="loginUser(userLoginForm)">
       <div class="form-group">
         <label for="email">Email:</label>
-        <input type="email" class="form-control" [(ngModel)]="email" name="userEmail" id="email" placeholder="Enter email" name="email">
+        <input type="email" class="form-control" formControlName="email" name="userEmail" id="email" placeholder="Enter email" name="email">
       </div>
       <div class="form-group">
         <label for="pwd">Password:</label>
-        <input type="password" class="form-control" id="pwd" [(ngModel)]="pwd" placeholder="Enter password" name="pswd">
+        <input type="password" class="form-control" formControlName="password" id="pwd" placeholder="Enter password" name="pswd">
       </div>
       <div class="form-group form-check">
         <label class="form-check-label">
           <input class="form-check-input" type="checkbox" name="remember"> Remember me
         </label>
       </div>
-      <button type="submit" class="btn btn-primary">Submit</button>
+      <button type="submit" [disabled]="!userLoginForm.valid" class="btn btn-primary">Submit</button>
     </form>
   </div>
 </div>
 
+<!-- <app-user-login></app-user-login> -->
+
 <!-- {{userLoginForm.value | json}} -->
+
+<!-- Value: {{ userLoginForm.value }} -->
