--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,14 +17,6 @@
     <h2><a target="_blank" rel="noopener" href="https://blog.angular.io/">Angular blog</a></h2>
   </li>
 </ul> -->
-<nav class="navbar navbar-expand-sm bg-light justify-content-center">
-
-  <!-- Links -->
-  <ul class="navbar-nav">
-    <li class="nav-item">
-      <a class="nav-link" href="#">BugTracker</a>
-    </li>
-  </ul>
-</nav>
+<app-header></app-header>
 <router-outlet></router-outlet>
 
