--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -3,7 +3,7 @@
   <!-- Links -->
   <ul class="navbar-nav">
     <li class="nav-item">
-      <a class="nav-link" href="#">BugTracker</a>
+      <a class="nav-link" href="#">eShopKart</a>
     </li>
   </ul>
 </nav>
